[gd_scene load_steps=2 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 300.0
color = Color( 0.0901961, 0.105882, 0.117647, 1 )

[node name="RailL" type="ColorRect" parent="Bg"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 300.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="RailR" type="ColorRect" parent="Bg"]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 300.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="Trigger" type="ColorRect" parent="Bg"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 90.0
margin_right = 300.0
margin_bottom = 130.0
color = Color( 1, 1, 1, 0.0980392 )

[node name="Targets" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
